[package]
name = "serde-yaml-olidacombe"
version = "0.8.27"                                      # remember to update html_root_url, and readme for major versions
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "YAML support for Serde"
repository = "https://github.com/olidacombe/serde-yaml"
readme = "README.md"
keywords = ["yaml", "serde"]
categories = ["encoding"]

[dependencies]
ryu = "1.0"
indexmap = { version = "1.5.2", features = ["std"] }
serde = "1.0.69"
yaml_rust = { package = "yaml-rust-olidacombe", version = "0.6.0" } # built from https://github.com/olidacombe/yaml-rust/tree/default_to_multiline

[dev-dependencies]
anyhow = "1.0"
indoc = "1.0"
serde_derive = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
